fix: contact gaps

--- a/screens/BookDemo/sections/HeroSection/index.module.css
+++ b/screens/BookDemo/sections/HeroSection/index.module.css
@@ -25,6 +25,10 @@
   z-index: 0;
   max-width: max-content;
   height: max-content;
+
+  @media (max-width: 768px) {
+    gap: 48px;
+  }
 }
 
 .heroTitle {
